@startuml

' Version: 1.0.1
' Last modified: 2026-06-15
' Initial version

skinparam classAttributeIconSize 0

class User <<aggregate root>> {
  - id: Long
  - birthDate: LocalDateTime
  - passwordHash: String
  - isAdmin: Bool
  --
  + updateProfile(user: User)
}

class Neighborhood <<aggregate root>> {
  - id
  - name
}

class Biography <<value object>> {
  - info: String
  --
  - validate(info: String): bool
}

class FullName <<value object>> {
  - name: String
  - fullname: String
  --
  - validate(name: String): bool
}

class Mail <<value object>> {
  - mail: String
  --
  - validate(mail: String): bool
}

class Location <<value object>> {
  - city: String
  - country: String
}

User "1" --> "1" Biography : bio
User "1" --> "1" FullName : fullName
User "1" --> "1" Mail : mail
User "*" --> "1" Neighborhood : neighborhood
Neighborhood "1" --> "1" Location : location

@enduml